--- a/frontend/src/app/company-detail/company-detail.component.html
+++ b/frontend/src/app/company-detail/company-detail.component.html
@@ -1,5 +1,5 @@
-<div class="container mt-5">
-  <div class="row">
+<div class="container mt-5 card mb-3 bg-success-subtle text-primary-emphasis">
+    <div class="row">
     <div class="col-4 text-center">
 
       <div class="px-4 py-5">
@@ -20,7 +20,7 @@
 
       @if(company){
       <div class="container px-4 py-5" id="icon-grid">
-        <h2 class="pb-2 border-bottom">Company id {{company.id}}</h2>
+        <h2 class="pb-2 border-bottom">Número de Centro {{company.id}}</h2>
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4 py-5">
 
@@ -28,7 +28,7 @@
           <div class="col d-flex align-items-start">
             <i class="bi bi-geo-alt text-info flex-shrink-0 me-3 fs-2"></i>
             <div>
-              <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Company Name </h3>
+              <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Nombre del centro </h3>
               <p>{{company.name}}</p>
             </div>
           </div>
@@ -42,26 +42,30 @@
             <p>{{company.cif}}</p>
           </div>
         </div>
+
+
         <div class="col d-flex align-items-start">
           <i class="bi bi-cup-straw text-info flex-shrink-0 me-3 fs-2"></i>
           <div>
             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Ciudad</h3>
             <p>{{company.city}}</p>
           </div>
-          <div class="col d-flex align-items-start">
-            <i class="bi bi-geo-alt text-info flex-shrink-0 me-3 fs-2"></i>
+
+        <div class="col d-flex align-items-start">
+            <i class= "bi bi-bank2 me-3 fs-2"></i>
             <div>
               <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Dirección</h3>
               <p>{{company.street}}</p>
             </div>
+
           </div>
-          <div class="col d-flex align-items-start">
+        <div class="col d-flex align-items-start">
             <i class="bi bi-geo-alt text-info flex-shrink-0 me-3 fs-2"></i>
             <div>
               <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Código postal</h3>
               <p>{{company.postalCode}}</p>
             </div>
-          </div>
+        </div>
 
         </div>
       </div>
