Corrección company detail e iconos de boostrap

--- a/frontend/src/app/company-detail/company-detail.component.html
+++ b/frontend/src/app/company-detail/company-detail.component.html
@@ -26,7 +26,7 @@
 
 
           <div class="col d-flex align-items-start">
-            <i class="bi bi-geo-alt text-info flex-shrink-0 me-3 fs-2"></i>
+            <i class=" bi bi-shop-window me-3 fs-2"></i>
             <div>
               <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Nombre del centro </h3>
               <p>{{company.name}}</p>
@@ -36,7 +36,7 @@
 
         </div>
         <div class="col d-flex align-items-start">
-          <i class="bi bi-cup-straw text-info flex-shrink-0 me-3 fs-2"></i>
+          <i class="bi bi-pencil-square me-3 fs-2"></i>
           <div>
             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">CIF </h3>
             <p>{{company.cif}}</p>
@@ -45,14 +45,14 @@
 
 
         <div class="col d-flex align-items-start">
-          <i class="bi bi-cup-straw text-info flex-shrink-0 me-3 fs-2"></i>
+          <i class= "bi bi-buildings me-3 fs-2"></i>
           <div>
             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Ciudad</h3>
             <p>{{company.city}}</p>
           </div>
 
         <div class="col d-flex align-items-start">
-            <i class= "bi bi-bank2 me-3 fs-2"></i>
+            <i class= "bi bi-geo-alt me-3 fs-2"></i>
             <div>
               <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Dirección</h3>
               <p>{{company.street}}</p>
@@ -60,7 +60,7 @@
 
           </div>
         <div class="col d-flex align-items-start">
-            <i class="bi bi-geo-alt text-info flex-shrink-0 me-3 fs-2"></i>
+            <i class= "bi bi-envelope me-3 fs-2"></i>
             <div>
               <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Código postal</h3>
               <p>{{company.postalCode}}</p>
