--- a/frontend/src/app/booking-form/booking-form.component.html
+++ b/frontend/src/app/booking-form/booking-form.component.html
@@ -6,6 +6,9 @@
       } @else {
         <h1 class="mt-5 text-center text-primary-emphasis">Crear reserva</h1>
       }
+      @if(isForDelete){
+        <h1 class="mt-5 text-center text-primary-emphasis">Cancelar reserva</h1>
+      }
       <form class="mt.5" [formGroup]="bookingForm" (ngSubmit)="save()">
         <input type="hidden" formControlName="id">
         <div class="form-floating mb-3">
