--- a/frontend/src/app/treatment-list/treatment-list.component.html
+++ b/frontend/src/app/treatment-list/treatment-list.component.html
@@ -17,10 +17,10 @@
                     <div class="card-body">
                       <h5 class="card-title">{{treatment.title}}</h5>
                       <p class="card-text">{{treatment.descriptionShort}}</p>
-                      <p class="card-text"><small class="text-primary-emphasis">{{treatment.category.name}}</small></p>
+                      <p class="card-text"><small class="text-primary-emphasis">{{treatment.price}}€</small></p>
                       <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/treatments', treatment.id, 'detail']">Descripción</button>
                       <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/treatments', treatment.id, 'update']">Editar</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/treatments', treatment.id, 'booking']">Reservar</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/booking', treatment.id, 'create']">Reservar</button>
                     </div>
                   </div>
                 </div>
