--- a/frontend/src/app/company-form/company-form.component.html
+++ b/frontend/src/app/company-form/company-form.component.html
@@ -26,6 +26,7 @@
             <input type="text" class="form-control" id="title" formControlName="title"
             placeholder="">
             <label for="title">name</label>
+          </div>
             <div class="form-floating mb-3">
               <input type="text" class="form-control" id="title" formControlName="title"
               placeholder="">
