--- a/frontend/src/app/treatment-form/treatment-form.component.html
+++ b/frontend/src/app/treatment-form/treatment-form.component.html
@@ -1,1 +1,81 @@
-<p>treatment-form works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+
+      @if(isUpdate){
+        <h1 class="mt-5 text-center text-primary-emphasis">Actualizar o editar tratamiento <i class="bi bi-person-hearts"></i></h1>
+      } @else {
+        <h1 class="mt-5 text-center text-primary-emphasis">Crear tratamiento <i class="bi bi-person-hearts"></i></h1>
+      }
+
+      <form class="mt.5" [formGroup]="treatmentForm" (ngSubmit)="save()">
+
+        <input type="hidden" formControlName="id">
+
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" id="title"
+          formControlName="title" placeholder="">
+          <label for="title">Tratamiento</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input type="number" min="0" step="0.01"
+          class="form-control" id="price"
+          formControlName="price" placeholder="">
+          <label for="price">Precio (€)</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" id="descriptionShort"
+          formControlName="descriptionShort" placeholder="">
+          <label for="descriptionShort">Descripción corta</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" id="descriptionLong"
+          formControlName="descriptionLong" placeholder="">
+          <label for="descriptionLong">Descripción larga</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" id="afterCare"
+          formControlName="afterCare" placeholder="">
+          <label for="afterCare">Cuidados posteriores</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input type="number" min="0" step="0.01"
+          class="form-control" id="durationInMin"
+          formControlName="durationInMin" placeholder="">
+          <label for="durationInMin">Duración (min)</label>
+        </div>
+        <div class="form-floating mb-3">
+          <select class="form-select"
+          id="company"
+          formControlName="company"
+          [compareWith]="compareObjects"
+          multiple
+          style="min-height: 100px;">
+          <option selected>Selecciona un centro de servicio</option>
+          @for (company of companies; track company.id) {
+            <option [ngValue]="company">{{company.name}}</option>
+          }
+        </select>
+        <label for="company">Centro de servicio</label>
+        </div>
+        <div class="form-floating mb-3">
+          <select class="form-select"
+          id="categories"
+          formControlName="categories"
+          aria-label="categorias"
+          [compareWith]="compareObjects">
+          <option selected>Selecciona una categoria</option>
+          @for (category of categories; track category.id) {
+            <option [ngValue]="category">{{category.name}}</option>
+          }
+        </select>
+        <label for="category">Categoria</label>
+        </div>
+        <div class="d-grid gap-2">
+          <button class="btn btn-success" type="submit">Enviar</button>
+          <button class="btn btn-danger" type="button" [routerLink]="['/treatments']">Cancelar</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
