--- a/frontend/src/app/company-list/company-list.component.html
+++ b/frontend/src/app/company-list/company-list.component.html
@@ -29,7 +29,7 @@
             <td>{{company.values}}</td>
 
             <!-- Asociación Many To One -->
-            <td>{{company.treatments.title}}</td>
+            <td>{{company.treatments}}</td>
 
             <td>
               <button class="btn btn-success me-2" [routerLink]="['/companies', company.id, 'detail']">
