--- a/frontend/src/app/booking-form/booking-form.component.html
+++ b/frontend/src/app/booking-form/booking-form.component.html
@@ -7,7 +7,7 @@
         <h1 class="mt-5 text-center text-primary-emphasis">Crear reserva</h1>
       }
       @if(isForDelete){
-        <h1 class="mt-5 text-center text-primary-emphasis">Cancelar reserva</h1>
+        <h1 class="mt-5 text-center text-primary-emphasis">Cancelar reserva{{isForDelete}}</h1>
       }
       <form class="mt.5" [formGroup]="bookingForm" (ngSubmit)="save()">
         <input type="hidden" formControlName="id">
