--- a/frontend/src/app/category-detail/category-detail.component.html
+++ b/frontend/src/app/category-detail/category-detail.component.html
@@ -9,69 +9,12 @@
   <h1 class="display-5 fw-bold text-body-emphasis">{{category.name}}</h1>
   <div class="col-lg-6 mx-auto">
 
-     <p class="lead mb-4">{{category.minAge}} aqui deberia de ir la descripcion <</p>
+     <p class="lead mb-4">{{category.name}} tenemos grandes ofertas para tener tus uñas perfecta </p>
      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Editar</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
     </div>
   </div>
 </div>
 }
 
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-
-      <h2 class="mt-5">Categorias de tratamientos</h2>
-
-      <table class="table table-striped mt-5">
-        <thead>
-          <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Title</th>
-            <th scope="col">price</th>
-            <th scope="col">images</th>
-            <th scope="col">descriptionShort</th>
-            <th scope="col">DescriptionLong</th>
-            <th scope="col">AfteCare</th>
-            <th scope="col">DurationInmin</th>
-            <th scope="col">category/th>
-            <th scope="col">Company/th>
-
-          </tr>
-        </thead>
-        <tbody>
-          @for(treatment of treatments; track treatment.id) {
-          <tr>
-            <td>{{treatment.id}}</td>
-            <td>{{treatment.title}}</td>
-            <td>{{treatment.price}}</td>
-            <td>{{treatment.descriptionShort}}</td>
-
-            <td>{{treatment.price}}</td>
-
-            <td>
-              <a [routerLink]="['/company', treatment.company.id, 'detail']">
-                {{treatment.company.name}}
-              </a>
-            </td>
-
-            <td>
-              <a [routerLink]="['/description', treatment.descriptionShort, 'detail']">
-                {{treatment.descriptionShort}}
-              </a>
-            </td>
-
-            <td>
-              <button class="btn btn-success me-2" [routerLink]="['/treatments', treatment.id, 'detail']">
-                Ver
-              </button>
-            </td>
-          </tr>
-          }
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
 
