--- a/frontend/src/app/category-list/category-list.component.html
+++ b/frontend/src/app/category-list/category-list.component.html
@@ -1,6 +1,6 @@
 <div class="album py-5 bg-body-tertiary">
   <div class="container">
-    <h1 class="mb-5 mt-1">CATEGORIAS</h1>
+    <h1 class="mb-5 mt-1">CATEGORIAS<i class="bi bi-scissors"></i></h1>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
       @for (category of categories; track category.id) {
@@ -14,7 +14,7 @@
                 <p class="card-text">{{category.name}}</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/categories', category.id, 'detail']">Ver</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/categories', category.id, 'detail']">Ver Categorias</button>
                     <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
                   </div>
                   <small class="text-body-secondary">{{category.minAge}}</small>
