--- a/frontend/src/app/category-detail/category-detail.component.html
+++ b/frontend/src/app/category-detail/category-detail.component.html
@@ -1,20 +1,88 @@
+
+
 @if(category){
-<div class="px-4 py-5 my-5 text-center">
-  <!--recomendables imagenes cuadradas-->
+  <div class="px-4 py-5 my-5 text-center">
+    <!--recomendables imagenes cuadradas-->
 
-  <img class="d-block mx-auto mb-4 rounded-circle"
-  [src]="category.photoUrl" alt="category"
-  style="max-width:150px">
+    <img class="d-block mx-auto mb-4 rounded-circle"
+    [src]="category.photoUrl" alt="category"
+    style="max-width:150px">
 
-  <h1 class="display-5 fw-bold text-body-emphasis">{{category.name}}</h1>
-  <div class="col-lg-6 mx-auto">
+    <h1 class="display-5 fw-bold text-body-emphasis">{{category.name}}</h1>
+    <div class="col-lg-6 mx-auto">
 
-     <p class="lead mb-4">{{category.name}} tenemos grandes ofertas para tener tus uñas perfecta </p>
-     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Editar</button>
+       <p class="lead mb-4">{{category.name}} tenemos los mejores especialistas </p>
+       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Editar</button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4">crear nueva categoria</button>
+
+      </div>
     </div>
   </div>
-</div>
-}
+  }
 
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+
+        <h2 class="mt-5">Categorias de tratamientos</h2>
+
+        <table class="table table-striped mt-5">
+          <thead>
+            <tr>
+              <th scope="col">Tratamientos</th>
+              <th scope="col">imagen</th>
+              <th scope="col">Precio</th>
+              <th scope="col">Edad Minima</th>
+              <th scope="col">Duracion</th>
+              <th scope="col">Centro </th>
+            </tr>
+          </thead>
+
+          <tbody>
+            @for(treatment of treatments; track treatment.id) {
+            <tr>
+              <td>{{treatment.id}}</td>
+              <td>{{treatment.title}}</td>
+              <td>{{treatment.price}}</td>
+              <td>{{treatment.images}}</td>
+              <td>{{treatment.descriptionShort}}</td>
+              <td>{{treatment.descriptionLong}}</td>
+              <td>{{treatment.afterCare}}</td>
+              <td>{{treatment.durationInMin}}</td>
+
+              <td>
+                @if (treatment.id) {
+                  <span class="badge text-bg-success">1</span>
+                } @else {
+                  <span class="badge text-bg-danger">treatments</span>
+                }
+              </td>
+              <td>{{treatment.price}}</td>
+
+              <td>
+                <a [routerLink]="['/treatments', treatment.id, 'detail']">
+                  {{treatment.id}}
+                </a>
+                </td>
+
+
+              <td>
+                <a [routerLink]="['/treatments', treatment.id, 'update']">
+                  {{treatment.durationInMin}}
+                </a>
+              </td>
+
+              <td>
+                <button class="btn btn-success me-2" [routerLink]="['/treatments', treatment.id, 'detail']">
+                  Ver
+                </button>
+              </td>
+            </tr>
+            }
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 
