--- a/frontend/src/app/category-list/category-list.component.html
+++ b/frontend/src/app/category-list/category-list.component.html
@@ -13,13 +13,12 @@
 
               <div class="card-body">
                 <p class="card-text">{{category.name}}</p>
+
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/categories', category.id, 'detail']">Ver</button>
-                    <button type="button" class="btn btnsm btn-outline-secondary" [routerLink]="['/categories', category.id, 'update']"> crear categoria</button>
 
                   </div>
-
 
                   <small class="text-body-secondary">{{category.minAge}}</small>
                 </div>
@@ -27,6 +26,8 @@
             </div>
           </div>
       }
+      <button class="btn btn-outline-info"
+      routerLink="/categories/create">Crear Tratamiento</button>
     </div>
   </div>
 </div>
