--- a/frontend/src/app/booking-detail/booking-detail.component.html
+++ b/frontend/src/app/booking-detail/booking-detail.component.html
@@ -9,9 +9,9 @@
             <div class="container mt-5">
               <div class="row">
               <div class="col-4 text-center col-md-4 col-sm-12 text-center">
-                @if (booking.treatment.images) {
+                @if (booking.treatment?.images) {
                   <ngb-carousel>
-                    @for (image of booking.treatment.images; track image) {
+                    @for (image of booking.treatment?.images; track image) {
                       <ng-template ngbSlide>
                         <div class="picsum-img-wrapper">
                           <img [src]="image" alt="Random first slide" />
@@ -32,7 +32,7 @@
               <div class="col-8">
                 @if(booking) {
                   <div class="container px-4 py-5" id="icon-grid">
-                    <h2 class="pb-2 border-bottom">{{booking.treatment.title}}</h2>
+                    <h2 class="pb-2 border-bottom">{{booking.treatment?.title}}</h2>
                     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4 py-5">
                       <div class="col d-flex align-items-start">
                         <i
@@ -42,7 +42,7 @@
                         <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis text-center">
                           Reserva a nombre de:
                         </h3>
-                        <p>{{booking.user.fullName}}</p>
+                        <p>{{booking.user?.fullName}}</p>
                       </div>
                       </div>
                       <div class="col d-flex align-items-start">
@@ -53,7 +53,7 @@
                         <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis text-center">
                           Duración
                         </h3>
-                        <p>{{booking.treatment.durationInMin}} minutos</p>
+                        <p>{{booking.treatment?.durationInMin}} minutos</p>
                       </div>
                       </div>
                       <div class="col d-flex align-items-start">
@@ -64,7 +64,7 @@
                         <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis">
                           Precio
                         </h3>
-                        <p>{{booking.treatment.price}}€</p>
+                        <p>{{booking.treatment?.price}}€</p>
                       </div>
                       </div>
                       <div class="col d-flex align-items-start">
@@ -97,7 +97,7 @@
                         <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis">
                           Centro de belleza
                         </h3>
-                        <p>{{booking.treatment.company.name}}</p>
+                        <p>{{booking.treatment?.company?.name}}</p>
                       </div>
                       </div>
                       <div class="col d-flex align-items-start">
@@ -108,7 +108,7 @@
                         <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis">
                           Dirección
                         </h3>
-                        <p>{{booking.treatment.company.street}}</p>
+                        <p>{{booking.treatment?.company?.street}}</p>
                       </div>
                       </div>
                       <div class="col d-flex align-items-start">
@@ -119,7 +119,7 @@
                         <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis">
                           Descripción del tratamiento
                         </h3>
-                        <p>{{booking.treatment.descriptionLong}}</p>
+                        <p>{{booking.treatment?.descriptionLong}}</p>
                       </div>
                       </div>
                       <div class="col d-flex align-items-start">
@@ -130,7 +130,7 @@
                         <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis">
                           Cuidados posteriores
                         </h3>
-                        <p>{{booking.treatment.afterCare}}</p>
+                        <p>{{booking.treatment?.afterCare}}</p>
                       </div>
                       </div>
                     </div>
