Mejora formulario booking

--- a/frontend/src/app/booking-detail/booking-detail.component.html
+++ b/frontend/src/app/booking-detail/booking-detail.component.html
@@ -9,9 +9,9 @@
             <div class="container mt-5">
               <div class="row">
               <div class="col-4 text-center col-md-4 col-sm-12 text-center">
-                @if (booking.treatment?.images) {
+                @if (booking.treatment?.image) {
                   <ngb-carousel>
-                    @for (image of booking.treatment?.images; track image) {
+                    @for (image of booking.treatment?.image; track image) {
                       <ng-template ngbSlide>
                         <div class="picsum-img-wrapper">
                           <img [src]="image" alt="Random first slide" />
