--- a/frontend/src/app/category-detail/category-detail.component.html
+++ b/frontend/src/app/category-detail/category-detail.component.html
@@ -46,7 +46,7 @@
               <td>{{treatment.id}}</td>
               <td>{{treatment.title}}</td>
               <td>{{treatment.price}}</td>
-              <td>{{treatment.images}}</td>
+              <td>{{treatment.image}}</td>
               <td>{{treatment.descriptionShort}}</td>
               <td>{{treatment.descriptionLong}}</td>
               <td>{{treatment.afterCare}}</td>
