--- a/frontend/src/app/booking-form/booking-form.component.html
+++ b/frontend/src/app/booking-form/booking-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-lg-8">
       @if(isUpdate){
         <h1 class="mt-5 text-center text-primary-emphasis">Actualizar o editar reserva</h1>
       } @else {
@@ -9,7 +9,7 @@
       @if(isForDelete){
         <h1 class="mt-5 text-center text-primary-emphasis">Cancelar reserva{{isForDelete}}</h1>
       }
-      <form class="mt.5" [formGroup]="bookingForm" (ngSubmit)="save()">
+      <form class="mt.5" [formGroup]="bookingForm" (submit)="save()">
         <input type="hidden" formControlName="id">
         <div class="form-floating mb-3">
           <input type="text" class="form-control" id="user"
@@ -28,6 +28,19 @@
         </div>
         <div class="form-floating mb-3">
           <select class="form-select"
+          id="company"
+          formControlName="company"
+          [compareWith]="compareObjects"
+          style="min-height: 10px;">
+          <option selected>Selecciona un centro de belleza</option>
+          @for(company of companies; track company.id) {
+            <option [ngValue]="company">{{company.name}}</option>
+          }
+        </select>
+        <label for="company">Centro de belleza</label>
+        </div>
+        <div class="form-floating mb-3">
+          <select class="form-select"
           id="treatment"
           formControlName="treatment"
           [compareWith]="compareObjects"
@@ -42,6 +55,12 @@
         </div>
         <div class="form-floating mb-3">
           <input type="number" min="0" step="0.1"
+          class="form-control" id="price"
+          formControlName="price" placeholder="">
+          <label for="price">Precio (€)</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input type="number" min="0" step="0.1"
           class="form-control" id="discount"
           formControlName="discount" placeholder="">
           <label for="discount">Descuento (€)</label>
@@ -49,6 +68,39 @@
         <div class="d-grid gap-2">
           <button class="btn btn-success" type="submit">Enviar</button>
           <button class="btn btn-danger" type="button" [routerLink]="['/booking']">Cancelar</button>
+        </div>
+      </form>
+    </div>
+    <div class="col-md-5 col-lg-4 order-md-last">
+      <h4 class="d-flex justify-content-between align-items-center mb-3">
+        <span class="text-primary-emphasis">Tu reserva</span>
+        <span class="badge bg-primary rounded-pill">{{booking?.treatment}}</span>
+      </h4>
+      <ul class="list-group mb-3">
+        @if (treatments) {
+        <li class="list-group-item d-flex justify-content-between lh-sm">
+          <div>
+            <h6 class="my-0">{{treatments}}</h6>
+              <small class="text-body-secondary">{{treatments}}</small>
+          </div>
+        </li>
+      }
+        <li class="list-group-item d-flex justify-content-between bg-body-tertiary">
+          <div class="text-success">
+            <h6 class="my-0">Promo code</h6>
+            <small>EXAMPLECODE</small>
+          </div>
+          <span class="text-success">$5</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <span>Total (USD)</span>
+          <strong>{{price}}</strong>
+        </li>
+      </ul>
+      <form class="card p-2">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Promo code">
+          <button type="submit" class="btn btn-secondary">Redeem</button>
         </div>
       </form>
     </div>
