--- a/frontend/src/app/treatment-form/treatment-form.component.html
+++ b/frontend/src/app/treatment-form/treatment-form.component.html
@@ -8,7 +8,7 @@
         <h1 class="mt-5 text-center text-primary-emphasis">Crear tratamiento <i class="bi bi-person-hearts"></i></h1>
       }
 
-      <form class="mt.5" [formGroup]="treatmentForm" (ngSubmit)="save()">
+      <form class="mt.5" [formGroup]="treatmentForm" (submit)="save()">
 
         <div class="form-floating mb-3">
           <input type="text" class="form-control" id="id"
@@ -95,7 +95,7 @@
       }
       @if (!photoPreview && treatment?.image) {
         <h3 class="my-5">Previsualización de foto</h3>
-        <img class="img-fluid" [src]="'http://localhost:3000/assets/img/' + treatment?.image">
+        <img class="img-fluid" [src]="'http://localhost:3000/uploads/' + treatment?.image">
       }
     </div>
   </div>
