--- a/frontend/src/app/booking-form/booking-form.component.html
+++ b/frontend/src/app/booking-form/booking-form.component.html
@@ -72,10 +72,10 @@
       </form>
     </div>
     <div class="col-md-5 col-lg-4 order-md-last">
-      <h4 class="d-flex justify-content-between align-items-center mb-3">
+      <h2 class="d-flex justify-content-between align-items-center mt-5 mb-3">
         <span class="text-primary-emphasis">Tu reserva</span>
         <span class="badge bg-primary rounded-pill">{{booking?.treatment}}</span>
-      </h4>
+      </h2>
       <ul class="list-group mb-3">
         @if (treatments) {
         <li class="list-group-item d-flex justify-content-between lh-sm">
