--- a/frontend/src/app/company-list/company-list.component.html
+++ b/frontend/src/app/company-list/company-list.component.html
@@ -5,7 +5,7 @@
       <h1 class="mt-5">Listado de establecimientos <i class="bi bi-shop"></i></h1>
 
       <button class="btn btn-primary"
-      routerLink="/company/create">Crear establecimiento</button>
+      routerLink="/companies/create">Crear establecimiento</button>
 
       <table class="table table-striped mt-5">
         <thead>
