--- a/frontend/src/app/booking-detail/booking-detail.component.html
+++ b/frontend/src/app/booking-detail/booking-detail.component.html
@@ -163,9 +163,9 @@
                         <i class="bi-star{{ fill === 100 ? '-fill' : '' }} fs-3" style="color:#ffb900;"></i>
                       </ng-template>
                     </ngb-rating>
-                    {{comment.rating| date:'dd/MM/yyyy'}}
+                    {{comment.opinion | date:'dd/MM/yyyy'}}
                   </h6>
-                  <small class="text-body-secondary">{{comment.rating}}</small>
+                  <small class="text-body-secondary">{{comment.opinion}}</small>
                 </div>
               </a>
             </li>
@@ -179,7 +179,7 @@
           <div class="mb-3">
             <ngb-rating  formControlName="score" [max]="5">
               <ng-template let-fill="fill" let-index="index">
-                <i class="bi-star{{ fill === 100 ? '-fill' : '' }} fs-3" style="color:#ffb900;"></i>
+                <i class="bi-star{{ fill === 100 ? '-fill' : '' }} fs-3" style="color:#780a99;"></i>
               </ng-template>
             </ngb-rating>
           </div>
