--- a/frontend/src/app/booking-detail/booking-detail.component.html
+++ b/frontend/src/app/booking-detail/booking-detail.component.html
@@ -163,7 +163,7 @@
                         <i class="bi-star{{ fill === 100 ? '-fill' : '' }} fs-3" style="color:#ffb900;"></i>
                       </ng-template>
                     </ngb-rating>
-                    {{comment.opinion | date:'dd/MM/yyyy'}}
+                    {{comment.rating| date:'dd/MM/yyyy'}}
                   </h6>
                   <small class="text-body-secondary">{{comment.opinion}}</small>
                 </div>
