--- a/frontend/src/app/category-list/category-list.component.html
+++ b/frontend/src/app/category-list/category-list.component.html
@@ -8,7 +8,7 @@
             <div class="card shadow-sm">
               <div class="text-center">
                 <img class="bd-placeholder-img card-img-top" width="100%" height="350"
-              src="/assets/img/uñas.png">
+              src="/assets/img/uñas.png" >
               </div>
 
               <div class="card-body">
@@ -27,7 +27,10 @@
           </div>
       }
       <button class="btn btn-outline-info"
-      routerLink="/categories/create">Crear Tratamiento</button>
+      routerLink="/categories/create">Crear Categoria</button>
     </div>
   </div>
+
+
+
 </div>
